--- a/README.rdoc
+++ b/README.rdoc
@@ -31,7 +31,69 @@ Things you may want to cover:
 
 * Database creation
 
-* Database initialization
+* Database schema
+    create_table "cuisines", force: true do |t|
+    t.string   "name"
+    t.string   "description"
+    t.datetime "created_at"
+    t.datetime "updated_at"
+  end
+
+  create_table "cuisines_recipes", id: false, force: true do |t|
+    t.integer "cuisine_id"
+    t.integer "recipe_id"
+  end
+
+  create_table "ingredients", force: true do |t|
+    t.string   "name"
+    t.string   "description"
+    t.string   "measurement"
+    t.string   "cost"
+    t.text     "image"
+    t.datetime "created_at"
+    t.datetime "updated_at"
+  end
+
+  create_table "ingredients_recipes", id: false, force: true do |t|
+    t.integer "ingredient_id"
+    t.integer "recipe_id"
+  end
+
+  create_table "recipes", force: true do |t|
+    t.string   "name"
+    t.string   "description"
+    t.integer  "cooktime"
+    t.integer  "servingsize"
+    t.text     "instruction"
+    t.text     "image"
+    t.integer  "user_id"
+    t.integer  "cuisine_id"
+    t.datetime "created_at"
+    t.datetime "updated_at"
+    t.string   "yummly_id"
+    t.integer  "rating"
+  end
+
+  create_table "recipes_users", id: false, force: true do |t|
+    t.integer "recipe_id"
+    t.integer "user_id"
+  end
+
+  create_table "users", force: true do |t|
+    t.string   "name"
+    t.string   "address_1"
+    t.string   "address_2"
+    t.string   "city"
+    t.string   "postcode"
+    t.string   "country"
+    t.string   "email"
+    t.text     "image"
+    t.datetime "created_at"
+    t.datetime "updated_at"
+    t.string   "password_digest"
+  end
+
+end
 
 * How to run the test suite
 
