--- a/README.rdoc
+++ b/README.rdoc
@@ -32,7 +32,7 @@ Things you may want to cover:
 * Database creation
 
 * Database schema
-    create_table "cuisines", force: true do |t|
+    <b>create_table "cuisines", force: true do |t|<b>
     t.string   "name"
     t.string   "description"
     t.datetime "created_at"
