--- a/README.rdoc
+++ b/README.rdoc
@@ -101,17 +101,17 @@ Things you may want to cover:
 
 * Project plan
     
-    	Install and Setup
-		Build basic rails app 
-		Connect to database
-		Setup migration for 4 base tables
+    	- Install and Setup
+		-Build basic rails app 
+		-Connect to database
+		-Setup migration for 4 base tables
 		Setup migration for 3 relational tables
 		Test relational tables and base tables for data
 		Setup controllers (Recipes, Ingredients, Users, Cuisines, Session)
 		Setup routes
 		Open website to test rails server can start.
 
-	Setup CRUD for
+	- Setup CRUD for
 		Recipes
 		Cuisines
 		Ingredients
