--- a/README.rdoc
+++ b/README.rdoc
@@ -100,11 +100,10 @@ Things you may want to cover:
 
 
 * Project plan
-    
- - Install and Setup
-  - Build basic rails app 
-  - Connect to database
-  - Setup migration for 4 base tables
+   Install and Setup
+  	Build basic rails app 
+  	Connect to database
+  	Setup migration for 4 base tables
   
   
 		Setup migration for 3 relational tables
